ch3/test/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ch3-wordpress-dep
  labels:
    app: ch3-wordpress-dep

spec:
  replicas: 2
    selector:
      matchLabels:
        app: ch3-wordpress-dep
  template:
    metadata:
      labels:
        app: ch3-wordpress-dep
    spec:
      volumes:
        - name: ch3-wordpress-conf-vol
          configMap:
            name: ch3-wordpress-cm
      containers:
        - image: wordpress:5
          name: wordpress5
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ch3-wordpress-svc

spec:
  selector:
    app: ch3-wordpress-dep
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30088
  type: NodePort
